log
Thu 16 May 2024 05:58:59 PM UTC: 
 tests:  0|5
total_score: 0/70
7e9b849
Thu 16 May 2024 06:32:32 PM UTC: 
 sudoku.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘get_adj_nodes’:
sudoku.c:60:27: error: iteration 9 invokes undefined behavior [-Werror=aggressive-loop-optimizations]
   60 |             if(n-> sudo[i][j] == 0)
      |                ~~~~~~~~~~~^~~
sudoku.c:58:25: note: within this loop
   58 |       for(size_t j=0; j <= 9; j++)
      |                       ~~^~~~
sudoku.c:72:52: error: ‘fila_vacia’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   72 |       nuevo_nodo-> sudo[fila_vacia][columna_vacia] = i + 1;
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
332f770
Thu 16 May 2024 06:33:07 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:72:52: error: ‘fila_vacia’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   72 |       nuevo_nodo-> sudo[fila_vacia][columna_vacia] = i + 1;
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5d03c58
Thu 16 May 2024 06:33:28 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:72:52: error: ‘fila_vacia’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   72 |       nuevo_nodo-> sudo[fila_vacia][columna_vacia] = i + 1;
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
75013b2
Thu 16 May 2024 06:35:21 PM UTC: 
 sudoku.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
691fb92
Thu 16 May 2024 08:23:15 PM UTC: 
 sudoku.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘se_encuentra’:
sudoku.c:49:1: error: expected expression before ‘}’ token
   49 | }
      | ^
sudoku.c: In function ‘is_valid’:
sudoku.c:59:13: error: expected expression before ‘}’ token
   59 |             }
      |             ^
sudoku.c:57:22: error: unused variable ‘lista_columnas’ [-Werror=unused-variable]
   57 |                List *lista_columnas = createList();
      |                      ^~~~~~~~~~~~~~
test.c: In function ‘se_encuentra’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
In file included from test.c:5:
sudoku.c:48:10: error: unused variable ‘aux’ [-Werror=unused-variable]
   48 |    List *aux =
      |          ^~~
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
32dec5d
